--- a/popol/src/index.css
+++ b/popol/src/index.css
@@ -2,6 +2,13 @@ html, body,li,ul,p,h2,h1,h3,h4{
   margin: 0;
   padding: 0;
 }
+body{
+  overflow: hidden;
+}
+#root{
+  height: 100vh;
+  position: relative;
+}
 li{
   list-style: none;
 }
