--- a/popol/src/portfolio/css/layout.css
+++ b/popol/src/portfolio/css/layout.css
@@ -7,6 +7,10 @@
 }
 
 #footer{
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
     height: 100px;
     display: flex;
     justify-content: center;
