--- a/popol/src/index.css
+++ b/popol/src/index.css
@@ -1,13 +1,18 @@
-body {
+html, body,li,ul,p,h2,h1,h3,h4{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+  overflow: hidden;
+}
+#root{
+  height: 100vh;
+  position: relative;
+}
+li{
+  list-style: none;
+}
+a{
+  color: black;
+  text-decoration: none;
 }
