--- a/popol/src/portfolio/css/layout.css
+++ b/popol/src/portfolio/css/layout.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: space-between;
     padding: 0 5%;
+    padding-top: 15px;
     height: 90px;
     align-items: center;
 }
@@ -11,19 +12,17 @@
 }
 .logo{
         width: 70px;
-        padding-top: 90px;
 }
 .menu{
     position: relative;
+    display: flex;
+    align-items: center;
+    height: 100%;
 }
 .menu button{
-    position: absolute;
-    top: 0;
-    right: 0;
     color: white;
     font-weight: bold;
     font-size: 2.5vh;
-    margin-top: 45px;
     background: transparent;
     border: none;
     cursor: pointer;
@@ -49,6 +48,7 @@
     left: 0;
     width: 100vw;
     height: 100vh;
+    min-width: 800px;
     background-color: black;
 }
 .side ul{
@@ -57,6 +57,7 @@
     top: 50%;
     left: 50%;
     width: 50%;
+    min-width: 600px;
     height: 100%;
     transform: translate(-50%,-50%);
     border: 1px solid silver;
@@ -64,29 +65,33 @@
     box-sizing: border-box;
 }
 .side ul li {
-    font-size: 3vw;
-    justify-content: space-around;
+    font-size: max(24px,2.7vw);
+}
+.side ul li + li {
+    margin-top: 16px;
 }
 .side ul li div div:first-child{
     width: 50%;
 }
 .side ul li div div:last-child{
-    width: 50%;
+    width: fit-content;
     text-align: right;
+    cursor: pointer;
 }
 .flexbx{
     display: flex;
+    justify-content: space-between;
 }
 .side li:last-child{
     position: absolute;
     bottom: 5%;
     left: 50%;
     transform: translateX(-50%);
-    font-size: 1vw;
+    font-size: max(14px);
 }
 .txtbx{
-    font-size: 1.5vw;
-    margin: 2% 0;
+    font-size: max(1.2vw, 16px);
+    margin-top: 12px;
 }
 .sogabtnbx{
     margin-top: 3%;
@@ -104,8 +109,8 @@
     background-color: transparent;
 }
 .descbx{
-    margin-top: 3%;
-    font-size: 2.2vw;
+    margin-top: 16px;
+    font-size: max(1.4vw,16px);
 }
 
 .xbtn{
